# cmake-course

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
cmake/: AddSubmodule.cmake
configured/: CMakeLists.txt  config.hpp.in
src/my_lib/: CMakeLists.txt  my_lib.cc
